# airflow-provider

./: .gitattributes  .gitignore  MANIFEST.in  Makefile  PYPI_README.md  README.md  RELEASING.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: Dockerfile  conf.py  index.rst  yellowdog_provider.exceptions.rst  yellowdog_provider.hooks.rst  yellowdog_provider.operators.rst  yellowdog_provider.rst  yellowdog_provider.sensors.rst
docs/_static/: custom.css
yellowdog_provider/: __init__.py
yellowdog_provider/example_dags/: yd-provider-test.py
yellowdog_provider/exceptions/: yellowdog_exceptions.py
yellowdog_provider/hooks/: yellowdog_hooks.py
yellowdog_provider/operators/: yellowdog_operators.py
yellowdog_provider/sensors/: yellowdog_sensors.py
yellowdog_provider/utils/: yellowdog_utils.py
